cmake_minimum_required(VERSION 3.22)
project(webserver)
set(CMAKE_CXX_STANDARD 17)
include_directories(SYSTEM "/foo/bar")
include_directories(/usr/include)
link_directories(/usr/lib)
file(GLOB mysources_buffer buffer/* )
file(GLOB mysources_log log/* )
file(GLOB mysources_http http/* )
file(GLOB mysources_socket socket/* )
file(GLOB mysources_time timer/* )
file(GLOB mysources_epoll epoll/* )
file(GLOB mysources_server webserver/* )
file(GLOB mysources_pool pool/* )
add_executable(webserver main.cpp ${mysources_buffer} ${mysources_log} ${mysources_http} ${mysources_socket} ${mysources_time} ${mysources_epoll} ${mysources_server} ${mysources_pool} )
target_link_libraries(webserver -lmysqlclient)