cmake_minimum_required(VERSION 3.22)
project(webserver)
set(CMAKE_CXX_STANDARD 17)
include_directories(SYSTEM "/foo/bar")
include_directories(/usr/include)
link_directories(/usr/lib)
file(GLOB mysources_utility utility/*/* )
file(GLOB mysources_http http/* )
file(GLOB mysources_server webserver/* )

add_executable(webserver main.cpp ${mysources_utility}  ${mysources_http} ${mysources_server})
target_link_libraries(webserver -lmysqlclient)